creat add and edit

--- a/views/add.ejs
+++ b/views/add.ejs
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<P>ADD</P>
-		<form name = "formPerson" id = "main" action = "/addPerson" method = "post">
+		<form name = "formPerson" id = "main" action = "/createPation" method = "post">
 			<div class="main">
 			<div class="field">
 				<label>Фамилия</label>	
