--- a/views/add.ejs
+++ b/views/add.ejs
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 	<titel>
 		<link rel="stylesheet" type="text/css" href="sheets.css">
+		<link rel="stylesheet" type="text/css" href="bootstrap.css">
 		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 		<script type = "text/javascript" src = "add.js"></script>
 		
@@ -34,7 +35,7 @@
 				<input type = "text" name = "dataRegistartion" onchange="checkSecond(name,value)" onkeypress="timer(name)">
 			</div>
 			<div class="field">
-				<input type = "button" name = "sub" value = "Отправить" onClick = 'main()'>
+				<input type = "button" class="btn btn-default" name = "sub" value = "Отправить" onClick = 'main()'>
 			</div>
 			<div>
 				<P>Дополнительная информация:</P>
