--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -50,5 +50,23 @@
 		</div>
 		</form>
 		
+<!--
+var patientSchema = new mongoose.Schema({
+	lastName          : {type : String, defult:'Dou'},
+	firstName         : {type : String, defult: 'John'},
+	fatherName        : {type : String, defult:'-'},
+	dateOfBirth       : {type : Date, defult: Date.now},
+	sex               : {type:String},
+	SSN               : {type:String},
+	passportNumber    : {type:String},
+	race              : {type:String},
+	religion          : {type:String},
+	specialSigns      : {type:String},
+	national          : {type:String},
+	contactInformation: {type:String},
+	contactPerson     : {type:String}
+});
+ -->
+
 	</body>	
 </html>
