--- a/views/add.ejs
+++ b/views/add.ejs
@@ -1,51 +1,208 @@
 
-<html>
+<html ng-app>
 	<head>
 		<meta charset="UTF-8" />
 	<titel>
 		<link rel="stylesheet" type="text/css" href="sheets.css">
+	   <link rel="stylesheet" type="text/css" href="bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="bootstrap.css">
 		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script>
 		<script type = "text/javascript" src = "add.js"></script>
 		
 	</titel>
 	</head>
-	<body>
-		<P>ADD</P>
-		<form name = "formPerson" id = "main" action = "/createPation" method = "post">
-			<div class="main">
-			<div class="field">
-				<label>Фамилия</label>	
-				<input type = "text" name = "lastname" onchange="checkLast(name,value)" onkeypress="timer(name)">
-			</div>
-			<div class="field">
-				<label>Имя</label>
-				<input type = "text" name = "firstname" onchange="checkFirst(name,value)" onkeypress="timer(name)">	
-			</div>
-			<div class="field">
-				<label>Отчество</label>
-				<input type = "text" name = "secondtname" onchange="checkSecond(name,value)" onkeypress="timer(name)">
-			</div>
-			<div class="field">
-				<label>Диагноз</label>
-				<input type = "text" name = "diagnosis" onchange="checkSecond(name,value)" onkeypress="timer(name)">
-			</div>
-			<div class="field">
-				<label>Дата регистрации</label>
-				<input type = "text" name = "dataRegistartion" onchange="checkSecond(name,value)" onkeypress="timer(name)">
-			</div>
-			<div class="field">
-				<input type = "button" class="btn btn-default" name = "sub" value = "Отправить" onClick = 'main()'>
-			</div>
-			<div>
-				<P>Дополнительная информация:</P>
-				<span id = "res"><span>
-				<span id = "info"><span>
-				<span id = "hint"><span>
-			</div>
-		</div>
+	<body ng-controller="addControl" ng-init="getRace()">
+		<form name = "formCreatPerson" id = "add" action = "/createPation" method = "post" class="form-horizontal" role="form">
+			  <div class="form-group">
+			    <label for="inputEmail3" class="col-sm-2 control-label">Last Name</label>
+			    <div class="col-sm-10">
+			      <input type="text" class="form-control.addInput" name="lastName" placeholder="Last Name">
+			    </div>
+			  </div>
+			  <div class="form-group">
+			    <label for="inputPassword3" class="col-sm-2 control-label">First Name</label>
+			    <div class="col-sm-10">
+			      <input type="text" class="form-control.addInput" name="firstName" placeholder="First Name">
+			    </div>
+			  </div>
+			  <div class="form-group">
+			    <label for="inputPassword3" class="col-sm-2 control-label">Father Name</label>
+			    <div class="col-sm-10">
+			      <input type="text" class="form-control.addInput" name="fatherName" placeholder="Father Name">
+			    </div>
+			  </div>
+			  <div class="form-group">
+			    <label for="inputPassword3" class="col-sm-2 control-label">Date Of Birth</label>
+			    <div class="col-sm-10">
+			      <input type="date" class="data" name="dateOfBirth" min="1900-01-01" max="2014-05-22">
+			    </div>
+			  </div>
+			   <div class="form-group">
+			    <label for="inputPassword3" class="col-sm-2 control-label">Sex</label>
+			    <div class="col-sm-10">
+			      <select class="sex">
+					  <option ng-repeat="sex in sexs" name="sex">{{sex.type}}</option>
+					</select>
+			    </div>
+			  </div>
+			   <div class="form-group">
+			    <label for="inputPassword3" class="col-sm-2 control-label">SSN</label>
+			    <div class="col-sm-10">
+			      <input type="text" class="form-control.addInput" name="SSN" placeholder="SSN">
+			    </div>
+			  </div>
+			  <div class="form-group">
+			    <label for="inputPassword3" class="col-sm-2 control-label">Passport Number</label>
+			    <div class="col-sm-10">
+			      <input type="text" class="form-control.addInput" name="passportNumber" placeholder="Passport Number">
+			    </div>
+			  </div>
+			  <div class="form-group">
+			    <label for="inputPassword3" class="col-sm-2 control-label">Race</label>
+			    <div class="col-sm-10">
+			      <select class="sex" name="race">
+					  <option ng-repeat="race in races">{{race.type}}</option>
+					</select>
+			    </div>
+			  </div>
+			  <div class="form-group">
+			    <label for="inputPassword3" class="col-sm-2 control-label">Religion</label>
+			    <div class="col-sm-10">
+			      <input type="text" class="form-control.addInput" name="religion" placeholder="Religion">
+			    </div>
+			  </div>
+			  <div class="form-group">
+			    <label for="inputPassword3" class="col-sm-2 control-label">Special Signs</label>
+			    <div class="col-sm-10">
+			       <textarea class="specialSigns" rows="3" name="specialSigns"></textarea>
+			    </div>
+			  </div>
+			   <div class="form-group">
+			    <label for="inputPassword3" class="col-sm-2 control-label">Contact Information</label>
+			    <div class="col-sm-10">
+						<div class="form-group">
+						    <label for="inputEmail3" class="col-sm-2 control-label">Phone Mobile</label>
+						    <div class="col-sm-10">
+						      <input type="text" class="form-control.addInput" name="phoneNumberMobile" placeholder="Phone Mobile">
+						    </div>
+						  </div>
+						  <div class="form-group">
+						    <label for="inputPassword3" class="col-sm-2 control-label">Phone Home</label>
+						    <div class="col-sm-10">
+						      <input type="text" class="form-control.addInput" name="phoneNumberHome" placeholder="Phone Home">
+						    </div>
+						  </div>
+						   <div class="form-group">
+						    <label for="inputPassword3" class="col-sm-2 control-label">Skype</label>
+						    <div class="col-sm-10">
+						      <input type="text" class="form-control.addInput" name="skype" placeholder="Skype">
+						    </div>
+						  </div>
+						   <div class="form-group">
+						    <label for="inputPassword3" class="col-sm-2 control-label">Email</label>
+						    <div class="col-sm-10">
+						      <input type="text" class="form-control.addInput" name="email " placeholder="Email">
+						    </div>
+						  </div>
+						  <div class="col-sm-10">
+						  </div>
+			    </div>
+			  </div>
+
+			  <div class="form-group">
+			    <label for="inputPassword3" class="col-sm-2 control-label">Contact Person</label>
+
+			    <div class="col-sm-10">
+			    		 <div class="form-group">
+						    <label for="inputEmail3" class="col-sm-2 control-label">Last Name</label>
+						    <div class="col-sm-10">
+						      <input type="text" class="form-control.addInput" name="lastNameContactPerson" placeholder="Last Name">
+						    </div>
+						  </div>
+						  <div class="form-group">
+						    <label for="inputPassword3" class="col-sm-2 control-label">First Name</label>
+						    <div class="col-sm-10">
+						      <input type="text" class="form-control.addInput" name="firstNameContactPerson" placeholder="First Name">
+						    </div>
+						  </div>
+						  <div class="form-group">
+						    <label for="inputPassword3" class="col-sm-2 control-label">Father Name</label>
+						    <div class="col-sm-10">
+						      <input type="text" class="form-control.addInput" name="fatherNameContactPerson" placeholder="Father Name">
+						    </div>
+						  </div>
+
+
+						<div class="form-group">
+						    <label for="inputEmail3" class="col-sm-2 control-label">Phone Mobile</label>
+						    <div class="col-sm-10">
+						      <input type="text" class="form-control.addInput" name="phoneNumberMobileContactPerson" placeholder="Phone Mobile">
+						    </div>
+						  </div>
+						  <div class="form-group">
+						    <label for="inputPassword3" class="col-sm-2 control-label">Phone Home</label>
+						    <div class="col-sm-10">
+						      <input type="text" class="form-control.addInput" name="phoneNumberHomeContactPerson" placeholder="Phone Home">
+						    </div>
+						  </div>
+						   <div class="form-group">
+						    <label for="inputPassword3" class="col-sm-2 control-label">Skype</label>
+						    <div class="col-sm-10">
+						      <input type="text" class="form-control.addInput" name="skypeContactPerson" placeholder="Skype">
+						    </div>
+						  </div>
+						   <div class="form-group">
+						    <label for="inputPassword3" class="col-sm-2 control-label">Email</label>
+						    <div class="col-sm-10">
+						      <input type="text" class="form-control.addInput" name="emailContactPerson" placeholder="Email">
+						    </div>
+						  </div>
+						  <div class="col-sm-10">
+						  </div>
+			    </div>
+			  </div>
+			 
+
+			  <div class="form-group">
+			  <div class="form-group">
+			    <div class="col-sm-offset-2 col-sm-10">
+			      <input type="button" class="btn btn-default" name="Submit" value="Submit" ng-click="main()">
+			    </div>
+			  </div>
 		</form>
 		
 	</body>	
 </html>
-https://github.com/GGS89/Edit.git
+<!--
+var patientSchema = new mongoose.Schema({
+	lastName          : {type : String, defult:'Dou'},
+	firstName         : {type : String, defult: 'John'},
+	fatherName        : {type : String, defult:'-'},
+	dateOfBirth       : {type : Date, defult: Date.now},
+	sex               : {type:String},
+	SSN               : {type:String},
+	passportNumber    : {type:String},
+	race              : {type:String},
+	religion          : {type:String},
+	specialSigns      : {type:String},
+	national          : {type:String},
+	contactInformation: {type:String},
+	contactPerson     : {type:String}
+});
+
+var contactInformationSchema = new mongoose.Schema({
+	phoneNumberMobile  : {type:String},
+	phoneNumberHome    : {type:String},
+	email              : {type:String},
+	skype              : {type:String}
+
+});
+
+var contactPersonSchema = new mongoose.Schema({
+	lastName           : {type : String},
+	firstName          : {type : String},
+	fatherName         : {type : String},
+	contactInformation : {type:String}
+});
+ -->
