--- a/views/add.ejs
+++ b/views/add.ejs
@@ -41,8 +41,8 @@
 			   <div class="form-group">
 			    <label for="inputPassword3" class="col-sm-2 control-label">Sex</label>
 			    <div class="col-sm-10">
-			      <select class="sex">
-					  <option ng-repeat="sex in sexs" name="sex">{{sex.type}}</option>
+			      <select class="sex" name="sex">
+					  <option ng-repeat="sex in sexs" >{{sex.type}}</option>
 					</select>
 			    </div>
 			  </div>
@@ -70,6 +70,12 @@
 			    <label for="inputPassword3" class="col-sm-2 control-label">Religion</label>
 			    <div class="col-sm-10">
 			      <input type="text" class="form-control.addInput" name="religion" placeholder="Religion">
+			    </div>
+			  </div>
+			   <div class="form-group">
+			    <label for="inputPassword3" class="col-sm-2 control-label">National</label>
+			    <div class="col-sm-10">
+			      <input type="text" class="form-control.addInput" name="national" placeholder="National">
 			    </div>
 			  </div>
 			  <div class="form-group">
